🐛 fix bug footer on tablet

--- a/main.css
+++ b/main.css
@@ -332,7 +332,7 @@ footer#colophon {
 
 @media (min-width: 651px) and (min-height: 500px) {
 	footer#colophon {
-		width: calc(100% - 4.9rem);
+		width: calc(100% - 3rem);
 		display: flex;
 		flex-wrap: wrap;
 		align-items: center;
