--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,7 +6,7 @@ footer#colophon {
   margin-top: $spacing * 10;
 
   @include tablet {
-    width: calc(100% - #{$width-desktop-main-nav});
+    width: calc(100% - 3rem);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
